fix: description overflow

--- a/client/src/pages/HelloPage/HelloPage.scss
+++ b/client/src/pages/HelloPage/HelloPage.scss
@@ -23,6 +23,10 @@
   background: linear-gradient(90deg, rgba(26,26,26,0) 0%, rgba(255,255,255,1) 30%, rgba(255,255,255,1) 70%, rgba(19,19,19,0) 100%);
   background-color: white;
   height: 230px;
+
+  h2 {
+    text-align: center;
+  }
 }
 
 .h-background {
